--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>EBS Entry v2-21</title>
+    <title>EBS Entry v2-23</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js" async defer></script>
     <style>
@@ -44,11 +44,11 @@
 <body>
 <div class="container">
     <div class="header-wrap">
-        <div class="title-block"><h3>EBS Input</h3><div class="ver-tag">v2-21</div></div>
+        <div class="title-block"><h3>EBS Input</h3><div class="ver-tag">v2-23</div></div>
         <div class="header-btns">
             <button class="btn-lookup btn-test-mode" onclick="useTestData()">Use Test<br>Data</button>
-            <button class="btn-lookup btn-cache-save" onclick="cacheSave()">Save to<br>Local</button>
-            <button class="btn-lookup btn-cache-pull" onclick="cachePull()">Pull Local<br>Lookups</button>
+            <button class="btn-lookup btn-cache-save" onclick="cacheSave()">Save to<br>local</button>
+            <button class="btn-lookup btn-cache-pull" onclick="cachePull()">Pull local<br>Lookups</button>
             <button class="btn-lookup" onclick="initRefresh()">Refresh<br>Lookups</button>
             <button class="btn-lookup btn-reset-ui" onclick="localReset()">Reset<br>fields</button>
         </div>
@@ -88,25 +88,25 @@
     <div class="preview-wrap" id="previewArea"></div>
     <div id="auth_status">iOS Sync Status: Idle</div>
     <button id="log_btn" onclick="toggleLog(true)">Display Trace Log</button>
-    <div id="trace_log" onclick="toggleLog(false)">Trace: v2-21 UI Guardrails active.</div>
+    <div id="trace_log" onclick="toggleLog(false)">Trace: v2-23 Cosmetic adjustment applied.</div>
     <input type="hidden" id="bgTypeE" value="--">
 </div>
 <script>
     const SHEET_ID = '1DdjG4B8wB9llk7yOoRRO72G0XqHEgFkMIlLuusShA6E';
-    const VER = "Excel Budget Sheet Input (v2-21)";
+    const VER = "Excel Budget Sheet Input (v2-23)";
     let AA_LIST = [], coordinateMap = {}, symbols = { "GBP": "£", "EUR": "€", "USD": "$", "ZAR": "R", "CHF": "Fr", "THB": "฿", "RUR": "₽", "COP": "COL$" };
     let tokenClient, gapiInited = false, gsiInited = false, wipeConfirmed = false, editIndex = -1, rawLookupData = [];
 
     const TEST_SET = {
         "Grouping": ["Roy", "Peter"],
         "FU": ["v - Verified", "xf - Transfer", "S - Support"],
-        "Categories": ["Food", "Transfer", "Support Misc", "Salary", "Rent", "Interest", "Insurance"],
-        "Accounts": ["Cashplus P (AA)", "Revolut P (AA)", "Starling B (AA)", "Cash GBP (AA)", "Chase (AA)", "Employer (EXT)", "Landlord (EXT)", "Tesco (EXT)", "HMRC (EXT)", "Amazon (EXT)"],
-        "AA": ["Cashplus P (AA)", "Revolut P (AA)", "Starling B (AA)", "Cash GBP (AA)", "Chase (AA)"],
-        "Freq": ["A - Ad-hoc", "M - Monthly", "K - Transfer", "W - Weekly", "Q - Quarterly"],
-        "Status": ["N - New", "P - Paid", "R - Reconciled", "C - Cancelled"],
-        "Month": ["NEW", "JAN", "FEB", "MAR", "APR", "MAY"],
-        "Cur": ["GBP", "EUR", "USD", "ZAR"]
+        "Categories": ["Food", "Transfer", "Support Misc", "Salary", "Rent"],
+        "Accounts": ["Revolut P (AA)", "Starling B (AA)", "Employer (EXT)", "Landlord (EXT)", "Tesco (EXT)"],
+        "AA": ["Revolut P (AA)", "Starling B (AA)"],
+        "Freq": ["A - Ad-hoc", "M - Monthly", "K - Transfer"],
+        "Status": ["N - New", "P - Paid"],
+        "Month": ["NEW", "JAN", "FEB"],
+        "Cur": ["GBP", "EUR", "ZAR"]
     };
 
     function logTrace(msg) { const log = document.getElementById('trace_log'); const now = new Date().toLocaleTimeString(); log.innerText += `\n[${now}] ${msg}`; log.scrollTop = log.scrollHeight; }
@@ -127,20 +127,12 @@
         updateDropdown('colStatus', TEST_SET.Status, 'N');
         updateDropdown('colZ', TEST_SET.Month, 'NEW');
         updateDropdown('colX', TEST_SET.Cur, 'GBP');
-        localReset(); logTrace("Representational Data Loaded.");
+        localReset(); logTrace("Test Data Injected.");
     }
 
-    function cacheSave() { if (rawLookupData.length === 0) { alert("First Refresh Lookups"); return; } if (!confirm("Snapshot active values?")) return; localStorage.setItem('ebs_cache_data', JSON.stringify(rawLookupData)); localStorage.setItem('ebs_cache_coords', JSON.stringify(coordinateMap)); localStorage.setItem('ebs_cache_aa', JSON.stringify(AA_LIST)); logTrace("Cache Saved."); }
+    function cacheSave() { if (rawLookupData.length === 0) { alert("First Refresh Lookups"); return; } if (!confirm("Snapshot active values?")) return; localStorage.setItem('ebs_cache_data', JSON.stringify(rawLookupData)); localStorage.setItem('ebs_cache_coords', JSON.stringify(coordinateMap)); localStorage.setItem('ebs_cache_aa', JSON.stringify(AA_LIST)); logTrace("Snapshot saved to local storage."); }
+    function cachePull() { if (!confirm("Do you want to load local Lookups?")) return; const cached = localStorage.getItem('ebs_cache_data'); if (cached) { rawLookupData = JSON.parse(cached); coordinateMap = JSON.parse(localStorage.getItem('ebs_cache_coords')); AA_LIST = JSON.parse(localStorage.getItem('ebs_cache_aa')); populateUI(rawLookupData); logTrace("Snapshot Loaded from local."); } else { alert("No snapshot found."); } }
     
-    // Updated Logic v2-21
-    function cachePull() { 
-        if (!confirm("Do you want to load local Lookups?")) return; 
-        const cached = localStorage.getItem('ebs_cache_data'); 
-        if (cached) { 
-            rawLookupData = JSON.parse(cached); coordinateMap = JSON.parse(localStorage.getItem('ebs_cache_coords')); AA_LIST = JSON.parse(localStorage.getItem('ebs_cache_aa')); populateUI(rawLookupData); logTrace("Snapshot Loaded."); 
-        } else { alert("No snapshot found."); } 
-    }
-
     function initRefresh() { tokenClient.callback = async (resp) => { if (resp.access_token) { localStorage.setItem('g_token', resp.access_token); fetchLookupRefs(); } }; tokenClient.requestAccessToken(); }
     async function fetchLookupRefs() { const res = await gapi.client.sheets.spreadsheets.values.get({ spreadsheetId: SHEET_ID, range: 'LookupRefs!A2:C15' }); res.result.values.forEach(r => { coordinateMap[r[0]] = { val: colToIndex(r[1].toUpperCase().replace(/[0-9]/g, '')), desc: (r[2] && r[2].toLowerCase() !== 'n/a') ? colToIndex(r[2]) : null }; }); fetchActiveAccounts(); }
     function colToIndex(col) { let idx = 0; for(let i=0; i<col.length; i++) { idx = idx * 26 + (col.charCodeAt(i) - 64); } return idx - 1; }
@@ -148,7 +140,18 @@
     async function fetchActualData() { const res = await gapi.client.sheets.spreadsheets.values.get({ spreadsheetId: SHEET_ID, range: 'Lookups!A2:AC1000' }); rawLookupData = res.result.values; populateUI(rawLookupData); }
     function populateUI(data) { const pop = (id, key, def, p = null) => { const list = data.filter(r => r[coordinateMap[key].val]).map(r => { const v = r[coordinateMap[key].val], d = coordinateMap[key].desc !== null ? r[coordinateMap[key].desc] : null; return d ? `${v} - ${d}` : v; }); updateDropdown(id, list, def, p); }; pop('colA','Grouping','Roy'); pop('colB','F/U','v'); pop('colF','Category',null,'--Select--'); pop('colH','From',null,'--Select--'); pop('colI','To',null,'--Select--'); pop('colFreq','Frequency','A'); pop('colStatus','Status','N'); pop('colZ','Month','NEW'); pop('colX','Currency','GBP'); localReset(); }
     function updateDropdown(id, vals, def, prompt) { const s = document.getElementById(id); let h = prompt ? `<option value="" disabled selected>${prompt}</option>` : ''; h += vals.map(v => `<option value="${v}">${v}</option>`).join(''); s.innerHTML = h; if(def) { const o = Array.from(s.options).find(opt => opt.value.startsWith(def)); if(o) s.value = o.value; } }
-    function localReset() { ['colT','colV','colG','colK'].forEach(id => document.getElementById(id).value = ""); document.getElementById('colM').value = "1"; document.getElementById('workTypeDisplay').innerText = "--"; editIndex = -1; renderPreview(); calc(); }
+
+    function localReset() {
+        ['colT','colV','colG','colK'].forEach(id => { const el = document.getElementById(id); if(el) el.value = ""; });
+        document.getElementById('colM').value = "1";
+        document.getElementById('workTypeDisplay').innerText = "--";
+        editIndex = -1;
+        const resetSel = (id, def) => { const s = document.getElementById(id); if(!s) return; if(def) { const opt = Array.from(s.options).find(o => o.value.startsWith(def)); if(opt) s.value = opt.value; } else s.selectedIndex = 0; };
+        resetSel('colA','Roy'); resetSel('colB','v'); resetSel('colF',null); resetSel('colH',null); resetSel('colI',null); resetSel('colFreq','A'); resetSel('colStatus','N'); resetSel('colZ','NEW'); resetSel('colX','GBP');
+        renderPreview(); calc();
+        logTrace("local UI Reset Complete.");
+    }
+
     function handleAccTrigger() {
         const h = document.getElementById('colH').value, i = document.getElementById('colI').value, fu = document.getElementById('colB'), typeDisp = document.getElementById('workTypeDisplay'), cat = document.getElementById('colF'), freq = document.getElementById('colFreq'); if (!h || !i || h.includes("--") || i.includes("--")) return;
         const fAA = AA_LIST.includes(h), tAA = AA_LIST.includes(i); let valE = "zOut"; if (fAA && tAA) valE = "xfer"; else if (!fAA && tAA) valE = "In";
@@ -166,7 +169,7 @@
         let whoVal = ""; if (fv.startsWith('S')) whoVal = document.getElementById('colA').value;
         const row = Array(35).fill(""); row[0]=document.getElementById('colA').value; row[1]=document.getElementById('colB').value.split(' - ')[0]; row[2]=document.getElementById('colC').value; row[4]=document.getElementById('workTypeDisplay').innerText; row[5]=document.getElementById('colF').value.split(' - ')[0]; row[6]=document.getElementById('colG').value; row[7]=document.getElementById('colH').value; row[8]=document.getElementById('colI').value; row[10]=document.getElementById('colK').value; row[11]=document.getElementById('colFreq').value.split(' - ')[0]; row[14]=document.getElementById('colStatus').value.split(' - ')[0]; row[19]=parseFloat(document.getElementById('colT').value||0).toFixed(2); row[20]=document.getElementById('colM').value; row[21]=parseFloat(document.getElementById('colV').value||0).toFixed(2); row[22]=calc(); row[23]=document.getElementById('colX').value.split(' - ')[0]; row[25]=document.getElementById('colZ').value; row[33]=whoVal; row[34]=VER;
         let d = JSON.parse(localStorage.getItem('ebs_trf') || '[]'); if (editIndex > -1) d[editIndex] = row; else d.push(row);
-        localStorage.setItem('ebs_trf', JSON.stringify(d)); ['colT','colV','colG','colK'].forEach(id => document.getElementById(id).value = ""); document.getElementById('colM').value = "1"; editIndex = -1; calc(); renderPreview();
+        localStorage.setItem('ebs_trf', JSON.stringify(d)); localReset();
     }
     function renderPreview() {
         const d = JSON.parse(localStorage.getItem('ebs_trf') || '[]');
