--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>EBS Entry v2-23</title>
+    <title>EBS Entry v2-24</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js" async defer></script>
     <style>
         :root { --primary: #2c3e50; --accent: #27ae60; --danger: #c0392b; --bg: #f8f9fa; --bridge: #2980b9; --cache: #8e44ad; --test: #e67e22; }
         body { font-family: -apple-system, sans-serif; background: var(--bg); margin: 0; padding: 10px; }
-        .container { max-width: 950px; margin: auto; background: white; padding: 15px; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
+        .container { max-width: 960px; margin: auto; background: white; padding: 15px; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
         .header-wrap { display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; gap: 5px; }
         .title-block { display: flex; flex-direction: column; justify-content: center; min-width: 85px; }
         h3 { margin: 0; font-weight: bold; font-size: 1.1rem; line-height: 1.1; }
         .ver-tag { font-weight: 400; font-size: 0.7rem; color: #7f8c8d; margin-top: 2px; }
         .header-btns { display: flex; gap: 3px; }
-        .btn-lookup { background: var(--bridge); padding: 2px; font-size: 0.55rem; border-radius: 6px; border: none; color: white; cursor: pointer; font-weight: bold; width: 55px; height: 44px; line-height: 1.1; text-align: center; }
+        /* Button font size slightly reduced to fit new longer labels */
+        .btn-lookup { background: var(--bridge); padding: 2px; font-size: 0.5rem; border-radius: 6px; border: none; color: white; cursor: pointer; font-weight: bold; width: 55px; height: 44px; line-height: 1.1; text-align: center; overflow: hidden; }
         .btn-reset-ui { background: #7f8c8d; }
         .btn-cache-save { background: var(--accent); }
         .btn-cache-pull { background: var(--cache); }
@@ -30,24 +31,28 @@
         .actions { display: grid; grid-template-columns: 1fr 1fr 1.2fr; gap: 8px; }
         button { padding: 10px; border: none; border-radius: 6px; font-weight: bold; cursor: pointer; color: white; font-size: 0.72rem; }
         .preview-wrap { width: 100%; overflow-x: auto; margin-top: 15px; -webkit-overflow-scrolling: touch; border: 1px solid #ddd; border-radius: 6px; }
-        table { width: 880px; border-collapse: collapse; font-size: 0.58rem; table-layout: fixed; }
+        /* Table width increased to 940px to accommodate wider labels */
+        table { width: 940px; border-collapse: collapse; font-size: 0.58rem; table-layout: fixed; }
         th, td { border: 1px solid #eee; padding: 6px 3px; text-align: left; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
         th { background: #f2f2f2; font-weight: bold; }
+        /* Adjusted column widths for new labels */
         .w-edit { width: 30px; text-align: center; } .w-grp { width: 35px; } .w-fu { width: 25px; } .w-date { width: 70px; }
-        .w-cat, .w-acc { width: 110px; } .w-sort { width: 20px; } .w-tiny { width: 15px; text-align: center; }
+        .w-cat, .w-acc { width: 110px; } 
+        .w-sort { width: 30px; } /* Increased for "sort" */
+        .w-small { width: 30px; text-align: center; } /* New class for "Note" and "Freq" */
         .w-tot { width: 80px; } .w-who { width: 45px; } .w-del { width: 30px; text-align: center; }
-        #auth_status { font-size: 0.65rem; margin-top: 10px; text-align: center; color: #7f8c8d; }
         #log_btn { margin-top: 15px; width: 100%; background: var(--primary); color: white; font-size: 0.7rem; border-radius: 6px; padding: 8px; display: block; border: none; }
         #trace_log { margin-top: 15px; padding: 10px; background: #2c3e50; color: #00ff00; font-family: monospace; font-size: 0.6rem; border-radius: 6px; max-height: 120px; overflow-y: auto; white-space: pre-wrap; display: none; cursor: pointer; }
+        .txt-center { text-align: center; }
     </style>
 </head>
 <body>
 <div class="container">
     <div class="header-wrap">
-        <div class="title-block"><h3>EBS Input</h3><div class="ver-tag">v2-23</div></div>
+        <div class="title-block"><h3>EBS Input</h3><div class="ver-tag">v2-24</div></div>
         <div class="header-btns">
-            <button class="btn-lookup btn-test-mode" onclick="useTestData()">Use Test<br>Data</button>
-            <button class="btn-lookup btn-cache-save" onclick="cacheSave()">Save to<br>local</button>
+            <button class="btn-lookup btn-test-mode" onclick="useTestData()">Pull test<br>Lookups</button>
+            <button class="btn-lookup btn-cache-save" onclick="cacheSave()">Save to<br>local Lookups</button>
             <button class="btn-lookup btn-cache-pull" onclick="cachePull()">Pull local<br>Lookups</button>
             <button class="btn-lookup" onclick="initRefresh()">Refresh<br>Lookups</button>
             <button class="btn-lookup btn-reset-ui" onclick="localReset()">Reset<br>fields</button>
@@ -88,15 +93,16 @@
     <div class="preview-wrap" id="previewArea"></div>
     <div id="auth_status">iOS Sync Status: Idle</div>
     <button id="log_btn" onclick="toggleLog(true)">Display Trace Log</button>
-    <div id="trace_log" onclick="toggleLog(false)">Trace: v2-23 Cosmetic adjustment applied.</div>
+    <div id="trace_log" onclick="toggleLog(false)">Trace: v2-24 Labels updated.</div>
     <input type="hidden" id="bgTypeE" value="--">
 </div>
 <script>
     const SHEET_ID = '1DdjG4B8wB9llk7yOoRRO72G0XqHEgFkMIlLuusShA6E';
-    const VER = "Excel Budget Sheet Input (v2-23)";
+    const VER = "Excel Budget Sheet Input (v2-24)";
     let AA_LIST = [], coordinateMap = {}, symbols = { "GBP": "£", "EUR": "€", "USD": "$", "ZAR": "R", "CHF": "Fr", "THB": "฿", "RUR": "₽", "COP": "COL$" };
     let tokenClient, gapiInited = false, gsiInited = false, wipeConfirmed = false, editIndex = -1, rawLookupData = [];
 
+    // CURATED REPRESENTATIONAL SET v2-24
     const TEST_SET = {
         "Grouping": ["Roy", "Peter"],
         "FU": ["v - Verified", "xf - Transfer", "S - Support"],
@@ -171,10 +177,12 @@
         let d = JSON.parse(localStorage.getItem('ebs_trf') || '[]'); if (editIndex > -1) d[editIndex] = row; else d.push(row);
         localStorage.setItem('ebs_trf', JSON.stringify(d)); localReset();
     }
+
+    // v2-24 Updated renderPreview with full labels and centered data cells
     function renderPreview() {
         const d = JSON.parse(localStorage.getItem('ebs_trf') || '[]');
-        let h = '<table><tr><th class="w-edit">E</th><th class="w-grp">Grp</th><th class="w-fu">F/U</th><th class="w-date">Date</th><th class="w-cat">Category</th><th class="w-sort">s</th><th class="w-acc">From</th><th class="w-acc">To</th><th class="w-tiny">N</th><th class="w-tiny">F</th><th class="w-tot">Total</th><th class="txt-center" style="width:35px;">Mnth</th><th class="txt-center" style="width:15px;">S</th><th class="w-who">Who</th><th class="w-del">Del</th></tr>';
-        d.forEach((r, idx) => { const isEditing = editIndex === idx; h += `<tr><td><button onclick="${isEditing?'saveRow()':'handleEdit('+idx+')'}" style="background:${isEditing?'#f39c12':'#3498db'};color:white;border:none;border-radius:4px;padding:2px 6px;">${isEditing?'C':'E'}</button></td><td>${r[0]}</td><td>${r[1]}</td><td>${r[2].split('-')[2]} ${['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'][parseInt(r[2].split('-')[1])-1]}</td><td>${r[5]}</td><td>${r[6]}</td><td>${r[7]}</td><td>${r[8]}</td><td class="txt-center">${r[10]?'✓':''}</td><td>${r[11]}</td><td>${r[22]}</td><td>${r[25]}</td><td class="txt-center">${r[14]}</td><td>${r[33]}</td><td><button onclick="deleteRow(${idx})" style="background:red;border:none;color:white;cursor:pointer;padding:0 5px;border-radius:4px;">X</button></td></tr>`; });
+        let h = '<table><tr><th class="w-edit">E</th><th class="w-grp">Grp</th><th class="w-fu">F/U</th><th class="w-date">Date</th><th class="w-cat">Category</th><th class="w-sort">sort</th><th class="w-acc">From</th><th class="w-acc">To</th><th class="w-small">Note</th><th class="w-small">Freq</th><th class="w-tot">Total</th><th class="txt-center" style="width:35px;">Mnth</th><th class="txt-center" style="width:35px;">Status</th><th class="w-who">Who</th><th class="w-del">Del</th></tr>';
+        d.forEach((r, idx) => { const isEditing = editIndex === idx; h += `<tr><td><button onclick="${isEditing?'saveRow()':'handleEdit('+idx+')'}" style="background:${isEditing?'#f39c12':'#3498db'};color:white;border:none;border-radius:4px;padding:2px 6px;">${isEditing?'C':'E'}</button></td><td>${r[0]}</td><td>${r[1]}</td><td>${r[2].split('-')[2]} ${['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'][parseInt(r[2].split('-')[1])-1]}</td><td>${r[5]}</td><td>${r[6]}</td><td>${r[7]}</td><td>${r[8]}</td><td class="txt-center">${r[10]?'✓':''}</td><td class="txt-center">${r[11]}</td><td>${r[22]}</td><td>${r[25]}</td><td class="txt-center">${r[14]}</td><td>${r[33]}</td><td><button onclick="deleteRow(${idx})" style="background:red;border:none;color:white;cursor:pointer;padding:0 5px;border-radius:4px;">X</button></td></tr>`; });
         document.getElementById('previewArea').innerHTML = h + '</table>';
     }
     function deleteRow(i) { let d = JSON.parse(localStorage.getItem('ebs_trf') || '[]'); d.splice(i, 1); localStorage.setItem('ebs_trf', JSON.stringify(d)); editIndex = -1; renderPreview(); }
