--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>EBS Entry v3.01</title>
+    <title>EBS Entry v3.02</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js" async defer></script>
     <style>
@@ -13,14 +13,14 @@
         body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; background: var(--bg); margin: 0; padding: 10px; }
         .container { max-width: 960px; margin: auto; background: white; padding: 15px; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
         .header-wrap { display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; gap: 5px; }
-        .title-block { display: flex; flex-direction: column; justify-content: center; min-width: 85px; }
+        .title-block { display: flex; flex-direction: column; min-width: 85px; }
         h3 { margin: 0; font-weight: bold; font-size: 1.1rem; line-height: 1.1; color: var(--primary); }
-        .ver-tag { font-weight: 400; font-size: 0.7rem; color: #7f8c8d; margin-top: 2px; }
+        .ver-tag { font-weight: 400; font-size: 0.7rem; color: #7f8c8d; }
         .header-btns { display: flex; gap: 3px; }
-        .btn-lookup { background: var(--bridge); padding: 2px; font-size: 0.5rem; border-radius: 6px; border: none; color: white; cursor: pointer; font-weight: 600; width: 55px; height: 44px; line-height: 1.1; text-align: center; overflow: hidden; }
+        .btn-lookup { background: var(--bridge); padding: 2px; font-size: 0.5rem; border-radius: 6px; border: none; color: white; cursor: pointer; font-weight: 600; width: 55px; height: 44px; line-height: 1.1; text-align: center; }
         .btn-reset-ui { background: #7f8c8d; } .btn-cache-save { background: var(--accent); } .btn-cache-pull { background: var(--cache); } .btn-test-mode { background: var(--test); }
         label { font-size: 0.7rem; font-weight: 700; display: block; margin-bottom: 2px; color: var(--primary); }
-        input, select, textarea { width: 100%; padding: 8px; border: 1px solid #dcdde1; border-radius: 6px; font-size: 16px; box-sizing: border-box; height: 38px; }
+        input, select, textarea { width: 100%; padding: 8px; border: 1px solid #dcdde1; border-radius: 6px; font-size: 16px; box-sizing: border-box; height: 38px; -webkit-appearance: none; }
         .total-box { background: #e8f5e9; border: 2px dashed var(--accent); padding: 10px; border-radius: 8px; text-align: center; margin: 15px 0; }
         .total-val { font-size: 1.3rem; font-weight: bold; color: var(--accent); }
         .actions { display: grid; grid-template-columns: 1fr 1fr 1.2fr; gap: 8px; }
@@ -28,11 +28,13 @@
         .preview-wrap { width: 100%; overflow-x: auto; margin-top: 15px; border: 1px solid #ddd; border-radius: 6px; }
         table { width: 1050px; border-collapse: collapse; font-size: 0.58rem; table-layout: fixed; }
         th, td { border: 1px solid #eee; padding: 6px 3px; text-align: left; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
+        /* Note Font fix: forced sans-serif boldness v3.02 */
         th { background: #f2f2f2; font-weight: bold !important; color: var(--primary); font-family: inherit !important; }
         .w-edit { width: 30px; text-align: center; } .w-grp { width: 40px; } .w-day { width: 30px; text-align: center; } .w-fu { width: 60px; } .w-date { width: 70px; } .w-cat, .w-acc { width: 110px; } .w-sort { width: 30px; } .w-note { width: 40px; text-align: center; cursor: pointer; font-size: 1rem; } 
         .w-freq { width: 100px; } .w-cur { width: 35px; text-align: center; } .w-tot { width: 80px; text-align: right; } .w-mnth { width: 40px; text-align: center; } .w-stat { width: 60px; } .w-who { width: 45px; } .w-del { width: 30px; text-align: center; }
         #auth_status { font-size: 0.75rem; margin-top: 10px; text-align: center; color: var(--primary); font-weight: 600; }
-        #trace_log { margin-top: 15px; padding: 10px; background: #2c3e50; color: #00ff00; font-family: monospace; font-size: 0.6rem; border-radius: 6px; max-height: 120px; overflow-y: auto; display: none; }
+        #trace_btn { margin-top: 15px; width: 100%; background: #eee; border: 1px solid #ccc; border-radius: 6px; padding: 8px; font-weight: bold; cursor: pointer; }
+        #trace_log { margin-top: 10px; padding: 10px; background: #2c3e50; color: #00ff00; font-family: monospace; font-size: 0.6rem; border-radius: 6px; max-height: 120px; overflow-y: auto; display: none; }
         #note_modal { display: none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); }
         .modal-content { background: white; margin: 15% auto; padding: 20px; width: 80%; max-width: 400px; border-radius: 12px; }
     </style>
@@ -40,7 +42,7 @@
 <body>
 <div class="container">
     <div class="header-wrap">
-        <div class="title-block"><h3>EBS Input</h3><div class="ver-tag">v3.01</div></div>
+        <div class="title-block"><h3>EBS Input</h3><div class="ver-tag">v3.02</div></div>
         <div class="header-btns">
             <button class="btn-lookup btn-cache-pull" onclick="cachePull()">Pull local<br>Lookups</button>
             <button class="btn-lookup" id="refresh_btn" onclick="initRefresh()">Refresh<br>Lookups</button>
@@ -79,30 +81,30 @@
     <div class="actions">
         <button class="action-main" onclick="saveRow(false)" style="background:var(--accent);">Create Staging record</button>
         <button class="action-main" onclick="handleSync()" style="background:var(--bridge);">Send Staging records to Sheets</button>
-        <button class="action-main" id="wipeBtn" onclick="clearData()" style="background:var(--danger); opacity:0.85;">Clear Staging records</button>
+        <button class="action-main" id="wipeBtn" onclick="clearData()" style="background:var(--danger); opacity: 0.85;">Clear Staging records</button>
     </div>
     <div class="preview-wrap" id="previewArea"></div>
     <div id="auth_status">iOS Sync Status: Idle</div>
-    <button onclick="toggleLog()" style="width:100%; margin-top:10px; padding:8px;">Trace Log</button>
+    <button id="trace_btn" onclick="toggleLog()">Trace Log</button>
     <div id="trace_log"></div>
 </div>
 
 <div id="note_modal">
     <div class="modal-content">
         <label>Edit Note</label>
-        <textarea id="modal_note_text" rows="4" style="margin:10px 0;"></textarea>
+        <textarea id="modal_note_text" rows="4" style="margin-top:10px 0;"></textarea>
         <div style="display:flex; gap:10px;"><button onclick="commitNote()" style="flex:1; background:var(--accent); color:white; border:none; padding:10px; border-radius:6px;">Save</button><button onclick="closeNote()" style="flex:1; background:#7f8c8d; color:white; border:none; padding:10px; border-radius:6px;">Cancel</button></div>
     </div>
 </div>
 
 <script>
     const SHEET_ID = '1DdjG4B8wB9llk7yOoRRO72G0XqHEgFkMIlLuusShA6E';
-    const VER = "Excel Budget Sheet Input (v3.01)";
+    const VER = "Excel Budget Sheet Input (v3.02)";
     let AA_LIST = [], coordinateMap = {}, symbols = { "GBP": "£", "EUR": "€", "USD": "$" };
     let tokenClient, editIndex = -1, pendingEdit = -1, activeNoteIdx = -1, rawLookupData = [], wipeConfirmed = false, fetchTimer;
 
     function logTrace(msg) { const log = document.getElementById('trace_log'); log.innerText += `\n[${new Date().toLocaleTimeString()}] ${msg}`; log.scrollTop = log.scrollHeight; }
-    function toggleLog() { const l = document.getElementById('trace_log'); l.style.display = l.style.display === 'block' ? 'none' : 'block'; }
+    function toggleLog() { const l = document.getElementById('trace_log'); l.style.display = (l.style.display === 'block') ? 'none' : 'block'; }
     function gapiLoaded() { gapi.load('client', async () => { await gapi.client.init({ apiKey: 'AIzaSyDvZ1XZw5bZgWSB9zaU7h9Vtn7MhDGFMSM' }); await gapi.client.load('sheets', 'v4'); logTrace("GAPI Ready."); checkSavedToken(); }); }
     
     function gisLoaded() { 
@@ -110,7 +112,7 @@
             client_id: '23231735212-jtgur3sn2ndh798ke00pm2a1d5rkd4eu.apps.googleusercontent.com', scope: 'https://www.googleapis.com/auth/spreadsheets', 
             callback: (resp) => { if (resp.access_token) { sessionStorage.setItem('ebs_token', resp.access_token); gapi.client.setToken({access_token: resp.access_token}); fetchLookupRefs(); } } 
         }); 
-        logTrace("GIS Bridge Ready."); 
+        logTrace("GIS Ready."); 
     }
 
     function checkSavedToken() {
@@ -120,7 +122,7 @@
 
     function initRefresh() { 
         document.getElementById('auth_status').innerText = "Sync Status: Fetching Data...";
-        fetchTimer = setTimeout(() => { if (document.getElementById('auth_status').innerText.includes("Fetching")) { document.getElementById('auth_status').innerText = "Sync Status: Timeout - Retry"; logTrace("Fetch timed out."); } }, 10000);
+        fetchTimer = setTimeout(() => { if (document.getElementById('auth_status').innerText.includes("Fetching")) { document.getElementById('auth_status').innerText = "Sync Status: Timeout - Retry"; logTrace("Network Hang detected."); } }, 10000);
         tokenClient.requestAccessToken(); 
     }
 
@@ -129,7 +131,7 @@
             const res = await gapi.client.sheets.spreadsheets.values.get({ spreadsheetId: SHEET_ID, range: 'LookupRefs!A2:C15' });
             res.result.values.forEach(r => { coordinateMap[r[0]] = { val: colToIndex(r[1].toUpperCase().replace(/[0-9]/g, '')), desc: (r[2] && r[2].toLowerCase() !== 'n/a') ? colToIndex(r[2]) : null }; });
             fetchActiveAccounts();
-        } catch (e) { logTrace("Fetch Refs Fail."); }
+        } catch (e) { logTrace("Refs Error."); }
     }
 
     function colToIndex(col) { let idx = 0; for(let i=0; i<col.length; i++) { idx = idx * 26 + (col.charCodeAt(i) - 64); } return idx - 1; }
@@ -141,7 +143,7 @@
     function localReset() { ['colT','colV','colG','colK'].forEach(id => { const el = document.getElementById(id); if(el) el.value = ""; }); document.getElementById('colM').value = "1"; document.getElementById('workTypeDisplay').innerText = "--"; editIndex = -1; pendingEdit = -1; renderPreview(); calc(); }
     function handleAccTrigger() { const h = document.getElementById('colH').value, i = document.getElementById('colI').value, fu = document.getElementById('colB'), tD = document.getElementById('workTypeDisplay'), cat = document.getElementById('colF'), freq = document.getElementById('colFreq'); if (!h || !i || h.includes("--") || i.includes("--")) return; const fAA = AA_LIST.includes(h), tAA = AA_LIST.includes(i); let valE = fAA && tAA ? "xfer" : (!fAA && tAA ? "In" : "zOut"); tD.innerText = valE; if (valE === "xfer") { const xf = Array.from(fu.options).find(o => o.value.startsWith('xf')); if(xf) fu.value = xf.value; const k = Array.from(freq.options).find(o => o.value.startsWith('K')); if(k) freq.value = k.value; cat.value = "Transfer"; } }
     function handleCatTrigger() { if (document.getElementById('colF').value.startsWith('S')) { const s = Array.from(document.getElementById('colB').options).find(o => o.value.startsWith('S')); if(s) document.getElementById('colB').value = s.value; } }
-    function handleDateChange() { const dStr = document.getElementById('colC').value; if(!dStr) return; const [y, m, d] = dStr.split('-').map(Number); document.getElementById('auth_status').innerText = `Date: ${new Date(y, m-1, d).toDateString()}`; }
+    function handleDateChange() { const dStr = document.getElementById('colC').value; if(!dStr) return; const [y, m, d] = dStr.split('-').map(Number); logTrace("Date Set: " + new Date(y, m-1, d).toDateString()); }
     function calc() { const t = parseFloat(document.getElementById('colT').value)||0, u = parseFloat(document.getElementById('colM').value)||1, v = parseFloat(document.getElementById('colV').value)||0; const tot = ((t * u) + v).toFixed(2); document.getElementById('totalDisp').innerText = tot; return tot; }
     function handleManualFU() { if(document.getElementById('colB').value.startsWith('xf')) document.getElementById('colF').value = "Transfer"; }
     function initiateEdit(idx) { if (pendingEdit === idx) { editIndex = idx; pendingEdit = -1; const d = JSON.parse(localStorage.getItem('ebs_trf'))[idx]; const setUI = (id, val, isDrop = false) => { const el = document.getElementById(id); if(!el) return; if(!isDrop) el.value = val; else { const code = val.split(' ')[0]; const o = Array.from(el.options).find(opt => opt.value.startsWith(code)); if(o) el.value = o.value; } }; setUI('colA', d[0], true); setUI('colB', d[1], true); setUI('colC', d[2]); setUI('colF', d[5], true); setUI('colG', d[6]); setUI('colH', d[7], true); setUI('colI', d[8], true); setUI('colK', d[10]); setUI('colFreq', d[11], true); setUI('colStatus', d[14], true); setUI('colT', d[19]); setUI('colM', d[20]); setUI('colV', d[21]); setUI('colX', d[23], true); setUI('colZ', d[25], true); handleDateChange(); handleAccTrigger(); calc(); } else { pendingEdit = idx; editIndex = -1; } renderPreview(); }
